Moved MVC project to correct path in solution

--- a/Customer_Project_Administration_Application/appsettings.json
+++ b/Customer_Project_Administration_Application/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Customer_Project_Administration_Application-44E76E78-F518-4756-814E-A20538B3F8DF;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=aspnet-Customer_Project_Administration_SystemDB;Trusted_Connection=True"
+
   },
   "Customers": {
     "Url": "https://localhost:7018/api/Customer"
